# PVS

./: .gitignore  CMakeLists.txt  README.md  TODO.md
docs/: ARCHITECTURE.md  CPU_ISA_COVERAGE.md  GUI_PLAN.md  MMIO_MAP.md  PROJECT_CONTEXT.md  TASKS.md  TZ.md
gui/: README.md  app.js  index.html  styles.css
gui/tests/: app_smoke_test.js
reports/: generate_report.py  pvs_processor_simulation_report.docx
service/: go.mod
service/cmd/pvs-http/: main.go
service/cmd/pvs-runner/: main.go
service/internal/debugbridge/: process.go  process_test.go
service/internal/httpapi/: server.go  server_test.go
service/internal/model/: model.go
service/internal/otel/: trace.go
service/internal/queue/: queue.go
service/internal/runner/: runner.go  runner_test.go
service/internal/session/: manager.go  manager_test.go  replay.go
sim/: CMakeLists.txt
sim/include/sim/: bus.h  cpu.h  gpio.h  irq.h  memory.h  nvic.h  sim.h  tim2.h  usart1.h
sim/src/: bus.c  cli.c  debug.c  memory.c  sim.c
sim/src/cpu/: cpu.c
sim/src/devices/: gpio.c  nvic.c  stub.c  tim2.c  usart1.c
sim/src/util/: log.c
sim/tests/: cli_json_snapshot_test.c  firmware_integration_test.c  smoke_test.c
